--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -50,15 +50,10 @@ table.dataTable img {
 }
 
 table.dataTable tr img.link {
-  margin-left: 4px!important;
-
-  .widget & {
-    margin-left: 1px!important;
-  }
-}
-
-table.subDataTable img.link {
-  transform: translateY(-50%);
+  margin-right: 0.5em;
+  margin-bottom: 4px;
+  vertical-align: text-bottom;
+  margin-left: 1px;
 }
 
 table.dataTable tr.subDataTable {
